--- a/ITstep.WEB/Components/Pages/Sign.razor
+++ b/ITstep.WEB/Components/Pages/Sign.razor
@@ -1,5 +1,88 @@
-﻿<h3>Sign</h3>
+﻿@page "/SignUp"
+
+@inject HttpClient http
+@inject NavigationManager manager
+@rendermode RenderMode.InteractiveServer
+@using ITstep.Domen.Models
+@using Microsoft.AspNetCore.Mvc
+
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-header">
+                    <h1>Регистрация</h1>
+                </div>
+                <div class="card-body">
+                    <EditForm class="form-control" EditContext="model" OnSubmit="Submit" FormName="uniq">
+                        <div class="form-group">
+                            <label for="Name">Имя нового пользователя:</label>
+                            <InputText id="Name" @bind-Value="user.Name" class="form-control valid" />
+                        </div>
+                        <div class="form-group">
+                            <label for="Surname">Фамилия нового пользователя:</label>
+                            <InputText id="Surname" @bind-Value="user.Surname" class="form-control valid" />
+                        </div>
+                        <div class="form-group">
+                            <label for="Email">Email нового пользователя:</label>
+                            <input id="Email" type="Email" @bind-value="user.Email" class="form-control valid" />
+                        </div>
+                        <div class="form-group">
+                            <label for="Login">Придумайте логин:</label>
+                            <InputText id="Login" @bind-Value="user.Login" class="form-control valid" />
+                        </div>
+                        <div class="form-group">
+                            <label for="Password">Придумайте пароль:</label>
+                            <input id="Password" type="password" @bind-value="user.Password" class="form-control valid" />
+                        </div>
+                        <div class="form-group">
+                            <label for="Phone">Введите номер телефона:</label>
+                            <InputText id="Phone" @bind-Value="user.Phone" class="form-control valid" />
+                        </div>
+                        <div class="form-group">
+                            <label for="Deportament">Выберите отдел:</label>
+                            <InputSelect id="Deportament" @bind-Value="user.Deportament" class="form-control valid">
+                                <option value="IT">IT</option>
+                                <option value="HR">HR</option>
+                            </InputSelect>
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Рарегестрироваться" />
+                        </div>
+
+                    </EditForm>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 @code {
+    public User user = new();
+    EditContext model;
 
+    protected override async Task OnInitializedAsync()
+    {
+        model = new(user);
+    }
+
+    [IgnoreAntiforgeryToken]
+    public async Task Submit()
+    {
+        user.Score = 0;
+        user.IsPassed = false;
+        user.Deportament = "ff";
+        user.Photo = "https://amu.edu.kz/upload/default-avatar.jpg";
+        var response = await http.PostAsJsonAsync($"http://10.77.37.31:5079/api/Users", user);
+        if (response.IsSuccessStatusCode)
+        {
+            manager.NavigateTo("/Auth");
+        }
+        else
+        {
+            // Обработка ошибки, например, вывод сообщения об ошибке
+            var errorContent = await response.Content.ReadAsStringAsync();
+            Console.WriteLine($"Error: {errorContent}");
+        }
+    }
 }
