--- a/ITstep.WEB/Components/Pages/Sign.razor
+++ b/ITstep.WEB/Components/Pages/Sign.razor
@@ -42,12 +42,13 @@
                         <div class="form-group">
                             <label for="Deportament">Выберите отдел:</label>
                             <InputSelect id="Deportament" @bind-Value="user.Deportament" class="form-control valid">
+                                <option value="">Выберите отдел</option>
                                 <option value="IT">IT</option>
                                 <option value="HR">HR</option>
                             </InputSelect>
                         </div>
                         <div class="form-group">
-                            <input type="submit" value="Рарегестрироваться" />
+                            <button type="submit" class="btn btn-primary">Зарегестрироваться</button>
                         </div>
 
                     </EditForm>
@@ -69,11 +70,8 @@
     [IgnoreAntiforgeryToken]
     public async Task Submit()
     {
-        user.Score = 0;
-        user.IsPassed = false;
-        user.Deportament = "ff";
-        user.Photo = "https://amu.edu.kz/upload/default-avatar.jpg";
-        var response = await http.PostAsJsonAsync($"http://10.77.37.31:5079/api/Users", user);
+        //var response = await http.PostAsJsonAsync($"http://10.77.37.31:5079/api/Users", user);
+        var response = await http.PostAsJsonAsync($"http://192.168.1.68:5079/api/Users", user);
         if (response.IsSuccessStatusCode)
         {
             manager.NavigateTo("/Auth");
