--- a/ITstep.MudWEB/Components/Pages/Home.razor
+++ b/ITstep.MudWEB/Components/Pages/Home.razor
@@ -65,6 +65,6 @@
     private void LogOut()
     {
         session.sessinUser = null;
-        StateHasChanged();
+        manager.NavigateTo("/");
     }
 }
