--- a/ITstep.MudWEB/Components/_Imports.razor
+++ b/ITstep.MudWEB/Components/_Imports.razor
@@ -10,3 +10,6 @@
 @using ITstep.MudWEB.Components
 @using MudBlazor
 @using MudBlazor.Services
+
+@using Microsoft.AspNetCore.Components
+@using ITstep.MudWEB.Components.CustomComponents
