--- a/ITstep.MudWEB/Components/Pages/Education/Lesson2-3.razor
+++ b/ITstep.MudWEB/Components/Pages/Education/Lesson2-3.razor
@@ -1,5 +1,11 @@
 ﻿@page "/education/lesson2-3"
 
+@inject IDialogService DialogService
+
+<MudPopoverProvider />
+<MudDialogProvider />
+<MudSnackbarProvider />
+
 <PageTitle>Урок 2-3</PageTitle>
 
 <h3 class="py-4">ВНУТРЕННИЕ МЕРОПРИЯТИЯ</h3>
