--- a/ITstep.MudWEB/Components/Pages/Education/Lesson1-1.razor
+++ b/ITstep.MudWEB/Components/Pages/Education/Lesson1-1.razor
@@ -50,15 +50,15 @@
 	по всей России.
 </Paragraph>
 
+<MudContainer Class="d-flex justify-end align-right me-0">
+	<MudButton Href="/education/lesson1-2"
+			   Variant="Variant.Filled"
+			   EndIcon="@Icons.Material.Filled.ArrowForwardIos"
+			   Color="Color.Primary">
 
-<MudButton Href="/education/lesson1-2"
-		   Variant="Variant.Filled"
-		   EndIcon="@Icons.Material.Filled.ArrowForwardIos"
-		   Color="Color.Primary">
-
-	Далее
-</MudButton>
-
+		Далее
+	</MudButton>
+</MudContainer>
 
 @code {
 
