--- a/ITstep.MudWEB/Components/Pages/Education/Lesson1-2.razor
+++ b/ITstep.MudWEB/Components/Pages/Education/Lesson1-2.razor
@@ -35,14 +35,14 @@
     полно решить задачу заказчика по прозрачным
     для него правилам.
 </CardSlide>
-
-<MudButton Href="/education/lesson1-3"
-           Variant="Variant.Filled"
-           EndIcon="@Icons.Material.Filled.ArrowForwardIos"
-           Color="Color.Primary">
-    Далее
-</MudButton>
-
+<MudContainer Class="d-flex justify-end align-right me-0">
+    <MudButton Href="/education/lesson1-3"
+               Variant="Variant.Filled"
+               EndIcon="@Icons.Material.Filled.ArrowForwardIos"
+               Color="Color.Primary">
+        Далее
+    </MudButton>
+</MudContainer>
 @code {
 
 }
