--- a/ITstep.MudWEB/Components/Pages/Education/Lesson2-1.razor
+++ b/ITstep.MudWEB/Components/Pages/Education/Lesson2-1.razor
@@ -101,12 +101,14 @@
     </CardSlide>
 </MudGrid>
 
-<MudButton Href="/education/lesson2-2"
-           Variant="Variant.Filled"
-           EndIcon="@Icons.Material.Filled.ArrowForwardIos"
-           Color="Color.Primary">
-    Далее
-</MudButton>
+<MudContainer Class="d-flex justify-end align-right me-0">
+    <MudButton Href="/education/lesson2-2"
+               Variant="Variant.Filled"
+               EndIcon="@Icons.Material.Filled.ArrowForwardIos"
+               Color="Color.Primary">
+        Далее
+    </MudButton>
+</MudContainer>
 
 @code {
 
