--- a/ITstep.MudWEB/Components/Pages/Education/Lesson2-2.razor
+++ b/ITstep.MudWEB/Components/Pages/Education/Lesson2-2.razor
@@ -26,12 +26,14 @@
     ЛЕГКО НАЙТИ НА КОРПОРАТИВНОМ ПОРТАЛЕ.
 </Paragraph>
 
-<MudButton Href="/education/lesson2-3"
-           Variant="Variant.Filled"
-           EndIcon="@Icons.Material.Filled.ArrowForwardIos"
-           Color="Color.Primary">
-    Далее
-</MudButton>
+<MudContainer Class="d-flex justify-end align-right me-0">
+    <MudButton Href="/education/lesson2-3"
+               Variant="Variant.Filled"
+               EndIcon="@Icons.Material.Filled.ArrowForwardIos"
+               Color="Color.Primary">
+        Далее
+    </MudButton>
+</MudContainer>
 
 @code {
 
