--- a/ITstep.MudWEB/Components/Pages/EducationMain.razor
+++ b/ITstep.MudWEB/Components/Pages/EducationMain.razor
@@ -1,4 +1,5 @@
 ﻿@page "/education"
+@layout EducationNavMenu
 
 <PageTitle>Центр обучения</PageTitle>
 
@@ -35,7 +36,7 @@
 			<MudCardMedia Image=" " Height="150"/>
 			<MudCardContent>
 				<MudText Typo="Typo.h5">О компании</MudText>
-				<MudText Typo="Typo.body2">Расскажем о комании, ее истории, продуктах и принципах.</MudText>				
+				<MudText Typo="Typo.body2">Расскажем о комании, ее истории, продуктах, ценностях и принципах.</MudText>				
 			</MudCardContent>
 			<MudCardActions Class="flex-row-reverse">
 				<MudButton Href="/education/lesson1-1"
